--- a/main_menu/css/style.css
+++ b/main_menu/css/style.css
@@ -1,12 +1,41 @@
 body {
     background-color: rgb(8, 130, 170);
     height: 95vh;
+    max-width: 95vw;
 
 }
 
+ 
+
+
+img{
+    width: 50px;
+    height: 50px;
+}
+
+
+
+span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+b{
+    margin-top: 6.5px;
+}
+
+
+
 .container {
-    width: 55vw;
-    height: 100%;
+    max-width: 54vw;
+    width: 70vw;
+    height: 72vh;
+    max-height: 72vh;
+    
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     display: flex;
@@ -21,8 +50,11 @@ section {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    max-width: 55vw;
+    max-height: 100vh;
     width: 50vw;
     height: 50vh;
+    max-height: 100vh;
     scroll-snap-align: start;
     border-radius: 20px;
     flex-wrap: wrap;
@@ -38,16 +70,16 @@ section {
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5em;
     color: white;
-
 }
 
 p {
     color: whitesmoke;
     font-size: 1.2em;
     font-family: Arial, Helvetica, sans-serif;
-    height: 20vh;
+    
+     
+    padding: 0;  
 }
 
 p:nth-of-type(1) {
@@ -59,8 +91,11 @@ button {
     border-radius: 2em;
     padding: 1em;
     cursor: pointer;
-    width: 23vh;
+    width: 13vw;
+ 
     font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 button:hover {
@@ -68,4 +103,21 @@ button:hover {
     transition: all 0.3s;
     background-color: black;
     color: White;
+}
+footer {
+    background-color: #333;
+    height: 20px;
+    width: 55vw;
+    padding : 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+    margin: 0 auto;
+    margin-top: 20px;
+   
+
+     
+     
+    
 }
