--- a/sport_api/css/style.css
+++ b/sport_api/css/style.css
@@ -1,5 +1,17 @@
 body {
     background-color: #444;
+     
+}
+::-webkit-scrollbar {
+    width: 20px;
+    
+}
+
+::-webkit-scrollbar-track {
+    background: #dddddd;
+}
+::-webkit-scrollbar-thumb {
+    background: blue;
 }
 
 li {
