--- a/time_zone_api/css/style.css
+++ b/time_zone_api/css/style.css
@@ -61,6 +61,18 @@ button:hover {
     background-color: black;
      
 }
+::-webkit-scrollbar {
+    width: 20px;
+    
+}
+
+::-webkit-scrollbar-track {
+    background: #dddddd;
+}
+::-webkit-scrollbar-thumb {
+    background: blue;
+}
+
  
 a {
     text-decoration: none;
