--- a/weather_rn/css/style.css
+++ b/weather_rn/css/style.css
@@ -17,6 +17,17 @@ li {
     flex-wrap: wrap;
 
 }
+::-webkit-scrollbar {
+    width: 20px;
+    
+}
+
+::-webkit-scrollbar-track {
+    background: #dddddd;
+}
+::-webkit-scrollbar-thumb {
+    background: blue;
+}
 
 .inf {
     padding: 0 10px 0 10px;
