--- a/main_menu/css/style.css
+++ b/main_menu/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 body {
     background-color: rgb(8, 130, 170);
     height: 95vh;
@@ -24,9 +27,7 @@ span{
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
-b{
-    margin-top: 6.5px;
-}
+ 
 
 
 
@@ -35,7 +36,6 @@ b{
     width: 70vw;
     height: 72vh;
     max-height: 72vh;
-    
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     display: flex;
@@ -79,22 +79,37 @@ section {
 }
 
 
-h1 {
-    font-family: Arial, Helvetica, sans-serif;
+h2{
+    font-family: 'Pacifico', cursive;
     color: white;
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    font-family: 'Pacifico', cursive;
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    
 }
 
 p {
     color: whitesmoke;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-family: Arial, Helvetica, sans-serif;
     
      
     padding: 0;  
 }
+p::selection{
+    background-color: blue;
+    color: white;
+}
 
 p:nth-of-type(1) {
-    height: 25vh;
+    height: 27vh;
 
 }
 
@@ -120,14 +135,14 @@ footer {
     background-color: #333;
     height: 20px;
     width: 55vw;
-    padding : 20px;
+    padding : 25px 0 20px 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     border-radius: 20px;
     margin: 0 auto;
-    margin-top: 20px;
-   
+    margin-top: 15px;
+     
 
      
      
